--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		margin: 0px;
 		background: #ffffff;
 		font-family: "Courier New", Courier, monospace;
-		font-size: 12px;
+		font-size: 16px;
 		color: #000000;
 		user-select: none;
 	}
@@ -32,12 +32,20 @@
 		margin-bottom: 1cm;
 		margin-left: 1cm;
 		margin-right: 1cm;
-		padding: 10px;
+		padding-left: 20px;
+		padding-right: 20px;
 		text-align: left;
 	}
 </style>
 </head>
 <body id="body">
-	<div class="pista"><p>Pista #5</p></div>
+	<div class="pista">
+		<p><b>Pista #5</b></p>
+		<br><br>
+		<p align="center">&#128064;
+			<br>&#128214;
+			<br>&#129716;
+			<br>&#171; &#187;</p>
+	</div>
 </body>
 </html>
