--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
 <body id="body">
 	<div class="pista">
 		<p><b>Pista #5</b></p>
-		<br><br>
-		<p align="center">&#128064;
-			<br>&#128214;
+		<br>
+		<p align="center">&#127807;&#128105;&#127807;
+			<br>&#127807;&#128073;&#128214;&#128072;&#127807;
 			<br>&#129716;
-			<br>&#171; &#187;</p>
+			<br><br>&#171;Nunca esperei nada da vida.
+			<br>Por isso tenho tudo.&#187;
+			<br>José Saramago, escritor (1922-2010)</p>
 	</div>
 </body>
 </html>
