--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		text-decoration: none;
 	}
 	.pista {
+		height: calc((100vw - 2cm) * 1.5);
 		border: 1px solid #000000;
 		margin-top: 1cm;
 		margin-bottom: 1cm;
@@ -41,7 +42,7 @@
 <body id="body">
 	<div class="pista">
 		<p><b>Pista #5</b></p>
-		<br>
+		<br><br><br><br><br><br>
 		<p align="center">&#127807;&#128105;&#127807;
 			<br>&#127807;&#128073;&#128214;&#128072;&#127807;
 			<br>&#129716;
