--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		text-decoration: none;
 	}
 	.pista {
-		height: calc((100vw - 2cm) * 1.5);
+		height: 11.5cm;
 		border: 1px solid #000000;
 		margin-top: 1cm;
 		margin-bottom: 1cm;
