--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		padding: 0px;
 		margin: 0px;
 		background-image: url("olha_o_kunami_fresquinho.png");
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-size: cover;
 		background-color: #ffffff;
 		user-select: none;
 	}
